Change site description

--- a/nde-site/public/index.html
+++ b/nde-site/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ND Enterprises is a reliable wholesale partner specializing in Amazon sales channel management, optimized product listings, and efficient logistics. We help brands grow through high-volume purchasing, data sharing, and brand protection."
     />
     <link rel="apple-touch-icon" type="image/png" href="%PUBLIC_URL%/assets/favicon.ico" />
     <!--
