Logo in sharing and theme color

--- a/nde-site/public/index.html
+++ b/nde-site/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#262939" />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/logo-white-transparent.png" />
     <meta
       name="description"
       content="ND Enterprises is a reliable wholesale partner specializing in Amazon sales channel management, optimized product listings, and efficient logistics. We help brands grow through high-volume purchasing, data sharing, and brand protection."
